turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:25: error: stable identifier required, but RIGHT found.
    case RIGHT => right(); avance();
         ^Turmite:26: error: stable identifier required, but LEFT found.
    case LEFT => left(); avance();
         ^Turmite:27: error: stable identifier required, but DEMITOUR found.
    case DEMITOUR => retourne(); avance();
         ^Turmite:28: error: stable identifier required, but AVANCE found.
    case AVANCE => avance();
         ^Turmite:29: error: stable identifier required, but STOP found.
    case STOP=> 
         ^